# grpc-web-bazel-ts-example

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE  grpc_node_plugin.BUILD.bazel  grpcwebproxy.BUILD.bazel  package.json
api/: BUILD.bazel  main.ts  proxy.sh  tsconfig.json
proto/: BUILD.bazel  greeter.proto  ts_grpc_proto_library.bzl
server/: BUILD.bazel  main.ts  tsconfig.json
server/api/: BUILD.bazel  index.ts  proxy.ts
server/lib/: BUILD.bazel  lib.ts
web/: BUILD.bazel  index.html  index.ts  tsconfig.json
