#load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

load("@build_bazel_rules_nodejs//:index.bzl", "nodejs_binary")
load("@io_bazel_rules_docker//nodejs:image.bzl", "nodejs_image")
load("@npm_bazel_rollup//:index.bzl", "rollup_bundle")
load("@npm_bazel_typescript//:index.bzl", "ts_library")

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "server_lib",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/express",
        "@npm//@types/node",
        "@npm//express",
        "@npm//http-proxy-middleware",
    ],
    tsconfig = ":tsconfig.json",
)

rollup_bundle(
    name = "server_bundle",
    entry_point = "main.ts",
    deps = [
        ":server_lib",
    ],
    format = "cjs",
)

RUNTIME_DEPS = [
    "@npm//express",
    "@npm//google-protobuf",
    "@npm//grpc",
    "@npm//grpc-express",
    "@npm//http-proxy-middleware",
    ":server_bundle.js",
]

nodejs_image(
    name = "server",
    data = RUNTIME_DEPS,
    entry_point = "server_bundle.js",
    # See note in //api about the port parameter.
    #ports = ["5080"],
)

nodejs_binary(
    name = "dev",
    data = RUNTIME_DEPS,
    entry_point = "server_bundle.js",
    visibility = ["//:__pkg__"],
)

#go_library(
#    name = "go_default_library",
#    srcs = ["api.go"],
#    importpath = "github.com/shepheb/grpc/grpc-web-bazel-ts-example/server",
#    visibility = ["//visibility:private"],
#    deps = [
#        "@com_github_golang_protobuf//proto:go_default_library",
#        "@org_golang_google_grpc//:go_default_library",
#        "@org_golang_google_grpc//credentials:go_default_library",
#        "@org_golang_google_grpc//testdata:go_default_library",
#    ],
#)
#
#go_binary(
#    name = "server",
#    embed = [":go_default_library"],
#    visibility = ["//visibility:public"],
#)
