load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "main",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//grpc-web",
        "//proto:greeter_web_ts_proto",
    ],
    tsconfig = "//web:tsconfig.json",
)

ts_devserver(
    name = "devserver",
    scripts = ["@npm_bazel_labs//grpc_web:bootstrap_scripts"],
    deps = [
        ":main",
    ],
    entry_module = "tpt/web/index",
    serving_path = "/bundle.js",
    static_files = [
        "index.html",
    ],
    port = 5081,
)
