load("@npm_bazel_typescript//:index.bzl", "ts_devserver", "ts_library")
#load("@build_bazel_rules_nodejs//:index.bzl", "rollup_bundle")

exports_files(
    ["tsconfig.json"],
    visibility = ["//visibility:public"],
)

ts_library(
    name = "main",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/google-protobuf",
        "@npm//google-protobuf",
        "@npm//grpc-web",
        "@npm//vue",
        "//proto:greeter_web_ts_proto",
    ],
    tsconfig = "//web:tsconfig.json",
)

#rollup_bundle(
#    name = "bundle",
#    entry_point = "index.ts",
#    deps = [":main"],
#)

ts_devserver(
    name = "devserver",
    scripts = [
        "@npm_bazel_labs//grpc_web:bootstrap_scripts",
        "//:vue_umd",
    ],
    deps = [
        ":main",
    ],
    entry_module = "tpt/web/index",
    serving_path = "/bundle.js",
    static_files = [
        "index.html",
    ],
    port = 5081,
)
