load("@npm_bazel_typescript//:index.bzl", "ts_library")

ts_library(
    name = "api",
    srcs = glob(["*.ts"]),
    deps = [
        "@npm//@types/express",
        "@npm//@types/google-protobuf",
        "@npm//@types/node",
        "@npm//google-protobuf",
        "@npm//grpc",
        "@npm//express",
        "//proto:greeter_proto_ts",
    ],
    visibility = ["//server:__pkg__"],
    tsconfig = "//server:tsconfig.json",
)
